--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ body{
 .route-main{
   background-color: #3062D0;
   color: #fff;
+  height: 100%;
 }
 .route-coloumn{
   display: flex;
@@ -208,6 +209,7 @@ overflow: hidden;
 }
 .ticket-details div{
   width: 100%;
+  overflow: hidden;
 }
 .ticket-content{
   padding: 14px 12px;
@@ -251,7 +253,7 @@ overflow: hidden;
   }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px)  {
   .ticket-details{
     width: 100%;
   }
@@ -270,6 +272,8 @@ overflow: hidden;
     font-size: 10px;
     border-radius: 3px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    display: inline-block;
+    margin: 5px 0;
   }
   .route-head,.route-date{
     font-weight: 100;
@@ -295,7 +299,7 @@ overflow: hidden;
   }
   .direction-bus{
     width: 100px;
-  }
+  } 
 }
 
 /**********************END*******************/
